<resources>
    <string name="app_name">ReportarMais</string>
    <string name="notas">Ver Notas</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Palavra-Passe</string>
    <string name="action_settings">D</string>
    <string name="save">Guardar</string>
    <string name="update">Alterar</string>
    <string name="delete">Eliminar</string>
    <string name="empty_not_saved">Não Pode Ser Vazio</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="emailNew">Nome de Utilizador</string>
    <string name="loginNew">Login</string>
    <string name="notasNew">Ver Notas</string>
    <string name="passwordNew">Palavra-Passe</string>
    <string name="spUm">file1</string>
    <string name="spLogado">logado</string>
    <string name="spUsername">username</string>
    <string name="logout">Logout</string>
    <string name="reportInc">Reportar Incidente</string>
    <string name="opcoesMenu">Opções</string>
    <string name="por">Por:</string>
    <string name="autor">Por</string>
    <string name="id">id</string>
    <string name="quemReportou">Quem Reportou</string>
    <string name="acidente">Acidentes</string>
    <string name="avistamento">Avistamentos</string>
    <string name="obra">Obras</string>
    <string name="filtro">Filtros</string>
    <string name="allnor">Tudo</string>
    <string name="tudoani">Tudo - Animado</string>
    <string name="cate">Categoria</string>
    <string-array name="Tipos">
        <item>Acidentes</item>
        <item>Avistamentos</item>
        <item>Obras</item>
    </string-array>
    <string name="lati">Lat</string>
    <string name="longi">Lon</string>
    <string name="spIdUser">iduser</string>
    <string name="spLat">lat</string>
    <string name="spLon">lon</string>
    <string name="descript">Descrição</string>
    <string name="rep">Reportar</string>
</resources>
